[base] Move cmd switches to base

--- a/apps/half-life-2/CMakeLists.txt
+++ b/apps/half-life-2/CMakeLists.txt
@@ -18,13 +18,13 @@ set(WB_CURRENT_TARGET_NAME ${WB_HALF_LIFE2_TARGET_NAME})
 set(WB_CURRENT_TARGET_SUFFIX ".exe")
 
 if (WB_OS_WIN)
-  set(files "main_windows.cc")
+  set(files "hl2_exe_main_win.cc")
   set(hfiles "windows_resource.h")
 elseif (WB_OS_LINUX)
-  set(files "main_nix.cc")
+  set(files "hl2_exe_main_nix.cc")
   set(hfiles "")
 elseif (WB_OS_MACOSX)
-  set(files "main_mac.cc")
+  set(files "hl2_exe_main_mac.cc")
   set(hfiles "")
 endif()
 
