[ci] Do not run CI on assets or *.md changes

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,8 +7,14 @@ name: Build & Test
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
+      - 'assets/**'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
+      - 'assets/**'
 
 jobs:
   build-windows:
