--- a/whitebox-kernel/CMakeLists.txt
+++ b/whitebox-kernel/CMakeLists.txt
@@ -11,8 +11,8 @@ set(WB_WHITEBOX_KERNEL_BINARY_DIR   ${CMAKE_CURRENT_BINARY_DIR})
 set(WB_WHITEBOX_KERNEL_TARGET_NAME  "whitebox-kernel")
 
 set(WB_WHITEBOX_KERNEL_LINK_OPTIONS "")
-set(WB_WHITEBOX_KERNEL_LINK_DEPS base g3log mimalloc)
-set(WB_WHITEBOX_KERNEL_RUNTIME_DEPS base g3log mimalloc)
+set(WB_WHITEBOX_KERNEL_LINK_DEPS base g3log mimalloc whitebox-hid-driver)
+set(WB_WHITEBOX_KERNEL_RUNTIME_DEPS base g3log mimalloc whitebox-hid-driver)
 
 wb_cxx_shared_library(
   TARGET        ${WB_WHITEBOX_KERNEL_TARGET_NAME}
