--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,9 @@
 # Copyright (c) 2021 The WhiteBox Authors.  All rights reserved.
 # Use of this source code is governed by a 3-Clause BSD license that can be
 # found in the LICENSE file.
+#
+# Dependabot send alerts about outdated dependencies and known security
+# vulnerabilites.
 
 version: 2
 updates:
