--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,6 +1,8 @@
 # Copyright (c) 2021 The WhiteBox Authors.  All rights reserved.
 # Use of this source code is governed by a 3-Clause BSD license that can be
 # found in the LICENSE file.
+#
+# Continuous integration.
 
 name: Build & Test
 
