--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,6 +1,9 @@
 # Copyright (c) 2021 The WhiteBox Authors.  All rights reserved.
 # Use of this source code is governed by a 3-Clause BSD license that can be
 # found in the LICENSE file.
+#
+# CodeQL Analysis of the source code.
+# See https://github.com/github/codeql-action
 
 name: "CodeQL Analysis"
 
