[resources] Rename image version constants

--- a/apps/half-life-2/half_life_2_win.rc
+++ b/apps/half-life-2/half_life_2_win.rc
@@ -38,12 +38,12 @@ BEGIN
         BLOCK "040904B0"
         BEGIN
             VALUE "CompanyName",      WB_PRODUCT_COMPANY_NAME_STRING
-            VALUE "FileDescription",  WB_APP_PRODUCT_FILE_DESCRIPTION_STRING
-            VALUE "FileVersion",      WB_APP_PRODUCT_FILE_VERSION_INFO_STRING
-            VALUE "InternalName",     WB_APP_PRODUCT_INTERNAL_NAME_STRING
+            VALUE "FileDescription",  WB_PRODUCT_FILE_DESCRIPTION_STRING
+            VALUE "FileVersion",      WB_PRODUCT_FILE_VERSION_INFO_STRING
+            VALUE "InternalName",     WB_PRODUCT_INTERNAL_NAME_STRING
             VALUE "LegalCopyright",   WB_PRODUCT_LEGAL_COPYRIGHT_STRING
-            VALUE "OriginalFilename", WB_APP_PRODUCT_ORIGINAL_NAME_STRING
-            VALUE "ProductName",      WB_APP_PRODUCT_NAME_STRING
+            VALUE "OriginalFilename", WB_PRODUCT_ORIGINAL_NAME_STRING
+            VALUE "ProductName",      WB_PRODUCT_NAME_STRING
             VALUE "ProductVersion",   WB_PRODUCT_VERSION_INFO_STRING
         END
     END
