--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,7 +4,7 @@
 #
 # Continuous integration.
 
-name: Build & Test
+name: Build and Test
 
 on:
   push:
@@ -12,6 +12,7 @@ on:
     paths-ignore:
       - '**.md'
       - 'assets/**'
+
   pull_request:
     branches: [ master ]
     paths-ignore:
@@ -19,67 +20,29 @@ on:
       - 'assets/**'
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  build:
+    name: Build and Test
+
     strategy:
       fail-fast: false
       matrix:
         build: [ Release, Debug ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+
+    runs-on: ${{matrix.os}}
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
           fetch-depth: 1
           submodules: recursive
 
-      - name: Configure CMake
+      - name: Configure
         run: cmake -B ${{github.workspace}}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest"
 
-      - name: Build on a ${{runner.os}}
-        run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}}
-
-      - name: Test
-        working-directory: ${{github.workspace}}/out
-        run: ctest -C ${{matrix.build}}
-
-  build-linux:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        build: [ Release, Debug ]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-          submodules: recursive
-
-      - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON
-
-      - name: Build on a ${{runner.os}}
-        run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}}
-
-      - name: Test
-        working-directory: ${{github.workspace}}/out
-        run: ctest -C ${{matrix.build}}
-
-  build-macos:
-    runs-on: macos-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        build: [ Release, Debug ]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-          submodules: recursive
-
-      - name: Configure CMake
-        run: cmake -B ${{github.workspace}}/out -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON
-
-      - name: Build on a ${{runner.os}}
-        run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}}
+      - name: Build
+        run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}} --parallel
 
       - name: Test
         working-directory: ${{github.workspace}}/out
