[ci] Fix GCC -Wundef on CI, somehow inline suppression doesn't work

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -37,9 +37,16 @@ wb_cxx_shared_library(
 )
 
 if (WB_BUILD_TESTS)
+  set(WB_BASE_LINK_DEPS "")
+
+  if (WB_OS_WIN)
+    # _com_ptr_t support.
+    list(APPEND WB_BASE_LINK_DEPS "comsuppw")
+  endif()
+
   wb_cxx_test_exe_for_target(
     TARGET        ${WB_BASE_TARGET_NAME}
     SRC_DIR       ${WB_BASE_SOURCE_DIR}
-    LINK_DEPS     comsuppw
+    LINK_DEPS     ${WB_BASE_LINK_DEPS}
   )
 endif()
