--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
         build: [ Release, Debug ]
         os: [ macos-latest, ubuntu-latest, windows-latest ]
 
-    runs-on: ${{matrix.os}}
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
@@ -38,12 +38,21 @@ jobs:
           fetch-depth: 1
           submodules: recursive
 
-      - name: Configure
-        run: cmake -B ${{github.workspace}}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest"
+      - name: Configure (MacOS)
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON
+
+      - name: Configure (Ubuntu)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_GCC_ENABLE_WARNING_WUNDEF=OFF
+
+      - name: Configure (Windows)
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: cmake -B ${{ github.workspace }}\out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON -DWB_MSVC_CXX_LANGUAGE_VERSION="c++latest"
 
       - name: Build
-        run: cmake --build ${{github.workspace}}/out --config ${{matrix.build}} --parallel
+        run: cmake --build ${{ github.workspace }}/out --config ${{ matrix.build }} --parallel
 
       - name: Test
-        working-directory: ${{github.workspace}}/out
-        run: ctest -C ${{matrix.build}}
+        working-directory: ${{ github.workspace }}/out
+        run: ctest -C ${{ matrix.build }}
