[base] Mark main thread as game one in MMCSS and bump its priority

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -17,11 +17,12 @@ set(WB_BASE_RUNTIME_DEPS g3log mimalloc)
 if (WB_OS_WIN)
   # Delay load DLLs we use in rare call paths.
   list(APPEND WB_BASE_LINK_OPTIONS
-    "/DELAYLOAD:Comctl32.dll" "/DELAYLOAD:Shell32.dll")
+    "/DELAYLOAD:Avrt.dll" "/DELAYLOAD:Comctl32.dll" "/DELAYLOAD:Shell32.dll")
+  # Avrt for MMCSS support.
   # Delayimp for DLL dealy load support.
   # Comctl32 for TaskDialogIndirect.
   # Shell32 for ShellExecuteW.
-  list(APPEND WB_BASE_LINK_DEPS Delayimp Comctl32 Shell32)
+  list(APPEND WB_BASE_LINK_DEPS Avrt Delayimp Comctl32 Shell32)
 endif()
 
 wb_cxx_shared_library(
