--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,6 +38,16 @@ jobs:
           fetch-depth: 1
           submodules: recursive
 
+      - name: Install dependencies (Ubuntu)
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        run: sudo apt-get -y install libtool pkg-config libasound2-dev \
+          libpulse-dev libaudio-dev libjack-dev libx11-dev libxext-dev \
+          libxrandr-dev libxcursor-dev libxi-dev libxinerama-dev \
+          libxxf86vm-dev libxss-dev libgl1-mesa-dev libdbus-1-dev \
+          libudev-dev libgles2-mesa-dev libegl1-mesa-dev libibus-1.0-dev \
+          fcitx-libs-dev libsamplerate0-dev libsndio-dev libwayland-dev \
+          libxkbcommon-dev libdrm-dev libgbm-dev
+
       - name: Configure (MacOS)
         if: ${{ matrix.os == 'macos-latest' }}
         run: cmake -B ${{ github.workspace }}/out -Wdev -Werror=dev -DADD_FATAL_EXAMPLE=OFF -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCHANGE_G3LOG_DEBUG_TO_DBUG=ON -DDEBUG_BREAK_AT_FATAL_SIGNAL=ON -Dgtest_hide_internal_symbols=ON -DINSTALL_GTEST=OFF -DMI_BUILD_OBJECT=OFF -DMI_BUILD_STATIC=OFF -DMI_BUILD_TESTS=OFF -DMI_SECURE=ON -DWB_BUILD_TESTS=ON
