[sdl] Use UI for fatal events on Linux & Mac

--- a/apps/half-life-2/CMakeLists.txt
+++ b/apps/half-life-2/CMakeLists.txt
@@ -24,6 +24,7 @@ endif()
 set(WB_HALF_LIFE2_RUNTIME_DEPS
   base bootmgr g3log mimalloc whitebox-hid-driver whitebox-kernel)
 if (NOT WB_OS_WIN)
+  list(APPEND WB_HALF_LIFE2_LINK_DEPS SDL2::SDL2)
   list(APPEND WB_HALF_LIFE2_RUNTIME_DEPS SDL2::SDL2)
 endif ()
 
